[tool.poetry]
name = "pong"
version = "0.1.0"
description = ""
authors = ["Adam Braun <2417922-adbraun@users.noreply.gitlab.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
black = "^22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
